# Gatekeeper

./: .buildconfig  meson.build  org.gnome.Gatekeeper.json
data/: meson.build  org.gnome.Gatekeeper.appdata.xml.in  org.gnome.Gatekeeper.desktop.in  org.gnome.Gatekeeper.gschema.xml
po/: POTFILES  meson.build
src/: gatekeeper-window.c  gatekeeper-window.h  gatekeeper-window.ui  gatekeeper-window.ui~  gatekeeper.gresource.xml  main.c  meson.build
